@@ -5,6 +5,7 @@ When opening the compose window the account which has sent the last post is sele
 Added app name and version to startup and preferences window
 Added hint to ctrl-alt-p to the create post button
 Pressing ctrl-enter in compose area now sends the post
+Tray icon content menu now with icons and tooltip about ctrl-shift-p
 Clicking and holding the mouse now moves the compose window not when you are in the text area (so you can select text again)
 Added BSD license
 Removed big 1024px startup image from soultion (smaller download) 
